--- a/js/oauth.js.example
+++ b/js/oauth.js.example
@@ -2,5 +2,6 @@ var twitchbot = twitchbot || {};
 
 twitchbot.oauth = {
 	username: '<USERNAME>',
-	password: '<OAUTH KEY>'
+	password: '<OAUTH KEY>',
+	youtubeKey: '<YOUTUBE API KEY>'
 };
