--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongoose": "^4.10.4",
     "morgan": "~1.8.1",
     "node-sass-middleware": "0.9.8",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "tmi.js": "^1.2.1"
   }
 }
