--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "start http://localhost:3000 && node ./bin/www"
+    "start": "start http://localhost:3000 && nodemon ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
@@ -14,6 +14,7 @@
     "mongoose": "^4.10.4",
     "morgan": "~1.8.1",
     "node-sass-middleware": "0.9.8",
+    "nodemon": "^1.11.0",
     "serve-favicon": "~2.4.2",
     "tmi.js": "^1.2.1"
   }
