--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-sass-middleware": "0.9.8",
     "nodemon": "^1.11.0",
     "serve-favicon": "~2.4.2",
+    "socket.io": "^2.0.2",
     "tmi.js": "^1.2.1"
   }
 }
