--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   "dependencies": {
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
+    "csv": "^1.1.1",
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "hbs": "~4.0.1",
     "mongoose": "^4.10.4",
     "morgan": "~1.8.1",
+    "multer": "^1.3.0",
     "node-sass-middleware": "0.9.8",
     "nodemon": "^1.11.0",
     "serve-favicon": "~2.4.2",
