--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "hbs": "~4.0.1",
+    "moment": "^2.18.1",
     "mongoose": "^4.10.4",
     "morgan": "~1.8.1",
     "multer": "^1.3.0",
