--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "csv": "^1.1.1",
+    "dotenv": "^4.0.0",
     "express": "~4.15.2",
     "express-session": "^1.15.3",
     "hbs": "~4.0.1",
