--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "serve-favicon": "~2.4.2",
     "socket.io": "^2.0.2",
     "sqlite3": "^3.1.8",
+    "sweetalert": "^1.1.3",
     "tmi.js": "^1.2.1"
   },
   "devDependencies": {
