Created uptime command

--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,12 @@ public/img/
 /uploads/
 /twitchBot.db
 .env
-.elasticbeanstalk/
+
+# Elastic Beanstalk Files
+
+.elasticbeanstalk/*
+
+!.elasticbeanstalk/*.cfg.yml
+
+!.elasticbeanstalk/*.global.yml
+
